--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
+  "type": "module",
   "scripts": {
-    "lint": "eslint \"{client,server}/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "eslint \"{client,server}/**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint": "eslint \"{client,server}/**/*.{js,jsx,ts,tsx}\" --ignore-pattern client/dist/**",
+    "lint:fix": "eslint \"{client,server}/**/*.{js,jsx,ts,tsx}\" --ignore-pattern client/dist/** --fix",
     "format": "prettier --write \"{client,server}/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "format:check": "prettier --check \"{client,server}/**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.37.0",
+    "@types/node": "^24.6.2",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "jiti": "^2.6.1"
   }
 }
